# libevent-rs

./: .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  plot-bench.py  scratch_6.rs  wrapper.h
.github/workflows/: test.yml
docs/: event_handling.md
example-hello/: CMakeLists.txt  Cargo.toml
example-hello/src/: main.rs
example-hello/src/ffi/: helloc.c  helloc.h  mod.rs
examples/hello/: CMakeLists.txt  Cargo.toml  README.md  build.rs  conanfile.txt
examples/hello-tokio/: Cargo.toml
examples/hello-tokio/src/: main.rs
examples/hello/bindings/: bindings.rs
examples/hello/src/: main.rs
examples/hello/src/ffi/: helloc.c  helloc.h  mod.rs
libevent-sys/: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
libevent-sys/src/: lib.rs
sample/: bench.c  dns-example.c  event-read-fifo.c  hello-world.c  time-test.c  tokio-time-test.c  tokio_event_base.h
src/: backend.rs  base.rs  event.rs  lib.rs  lock.rs  time.rs  tokio_compat.rs
src/event/: base.rs  event.rs  mod.rs
src/tokio_backend/: api.rs  backend.rs  io.rs  mod.rs  runtime.rs  signal.rs
