[package]
name = "libevent-sys"
version = "0.2.1"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>",
           "Jon Magnuson <jon.magnuson@gmail.com>"]
repository = "https://github.com/jmagnuson/libevent-rs"
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Rust FFI bindings to the libevent library"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "libevent", "event"]

links = "event"
build = "build.rs"

[features]
default = [ "pkg-config" ]
static = []
bundled = [ "static", "cmake" ]

[build-dependencies]
bindgen = "0.53"
cmake = { version = "0.1", optional = true }
pkg-config = { version = "0.3", optional = true }
