[package]
name = "libevent-sys"
version = "0.2.1"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>",
           "Jon Magnuson <jon.magnuson@gmail.com>"]
repository = "https://github.com/jmagnuson/libevent-rs"
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Rust FFI bindings to the libevent library"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "libevent", "event"]

links = "event"
build = "build.rs"

[features]
default = [ "pkg-config", "openssl", "threading" ]
static = []
bundled = [ "static", "cmake" ]
openssl = [ "openssl-sys" ]
openssl_bundled = [ "openssl-sys/vendored", "threading" ]
threading = []

# features for development
verbose_build = []

[dependencies.openssl-sys]
version = "0.9"
optional = true

[build-dependencies]
bindgen = "0.53"
cmake = { version = "0.1", optional = true }
pkg-config = { version = "0.3", optional = true }
