[package]
name = "libevent-sys"
version = "0.2.6"
authors = ["Steven vanZyl <rushsteve1@rushsteve1.us>",
           "Jon Magnuson <jon.magnuson@gmail.com>",
           "Grant Elbert <elbe0046@gmail.com>"]
repository = "https://github.com/jmagnuson/libevent-rs"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Rust FFI bindings to the libevent library"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "libevent", "event"]

links = "event"
build = "build.rs"

[features]
default = [ "pkgconfig", "openssl", "threading", "buildtime_bindgen" ]
static = []
pkgconfig = [ "pkg-config" ]
bundled = [ "static", "cmake" ]
buildtime_bindgen = [ "bindgen" ]
openssl = [ "openssl-sys" ]
openssl_bundled = [ "openssl-sys/vendored", "threading" ]
threading = []
logging = []

# features for development
verbose_build = []

[dependencies.openssl-sys]
version = "0.9"
optional = true

[build-dependencies]
bindgen = { version = "0.64", optional = true, default-features = false, features = ["runtime"] }
cmake = { version = "0.1", optional = true }
pkg-config = { version = "0.3", optional = true }
