[package]
name = "hello-tokio"
version = "0.1.0"
authors = ["Jon Magnuson <jon.magnuson@gmail.com>"]
edition = "2018"

[features]
default = [ "bundled", "openssl", "buildtime_bindgen" ]
bundled = ["libevent/bundled",  "libevent-sys/bundled" ]
openssl = ["libevent/openssl"]
openssl_bundled = [ "libevent/openssl_bundled" ]
pkgconfig = ["libevent/pkgconfig"]
buildtime_bindgen = ["libevent/buildtime_bindgen"]

[dependencies]
tokio = { version = "1", features = ["macros", "time", "net", "rt"] }

[dependencies.libevent]
path = "../../"
features = ["tokio_compat"]

# Needed to access headers, and create an FFI from C->Rust.
[dependencies.libevent-sys]
path = "../../libevent-sys"
